--- a/styles/styles.css
+++ b/styles/styles.css
@@ -435,7 +435,7 @@ main{
     #notes-list{
         overflow-y:scroll;
         border: 2px solid rgb(59, 63, 63);
-        height: auto;
+        height: 30%;
        
      }
     #note-editor{
@@ -458,7 +458,7 @@ main{
         
     }
     .searchbar{
-        width: 30%;
+        width: 20%;
         margin-left: -40px;
     } 
     .toolbox__btn {
